Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11712

Lustre build fails when CONFIG_BLK_DEV_INTEGRITY is unset

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.13.0, Lustre 2.12.1
    • Lustre 2.12.0
    • None
    • 3
    • 9223372036854775807

      Similar to LU-11096, the build is broken when CONFIG_BLK_DEV_INTEGRITY is unset. Regression looks to have been introduced by ccf3674c9ca3ed8918c49163007708d1ae5db6f5 LU-10472 osd-ldiskfs: T10PI between RPC and BIO

      [  267s] In file included from /home/abuild/rpmbuild/BUILD/cray-lustre-2.11.53.408/lustre/include/lvfs.h:45:0,
      [  267s]                  from /home/abuild/rpmbuild/BUILD/cray-lustre-2.11.53.408/lustre/include/obd.h:53,
      [  267s]                  from /home/abuild/rpmbuild/BUILD/cray-lustre-2.11.53.408/lustre/fid/fid_request.c:43:
      [  267s] /home/abuild/rpmbuild/BUILD/cray-lustre-2.11.53.408/lustre/include/lustre_compat.h: In function 'bdev_integrity_enabled':
      [  267s] /home/abuild/rpmbuild/BUILD/cray-lustre-2.11.53.408/lustre/include/lustre_compat.h:761:19: error: dereferencing pointer to incomplete type 'struct blk_integrity'
      [  267s]   if (rw == 0 && bi->verify_fn != NULL && 

       

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: