lustre/include/lustre_compat.h
@@ -730,6 +730,7 @@ static inline unsigned int bip_size(struct bio_integrity_payload *bip)
 #endif
 }
 
+#ifdef HAVE_BLK_INTEGRITY_ENABLED
 #ifndef INTEGRITY_FLAG_READ
 #define INTEGRITY_FLAG_READ BLK_INTEGRITY_VERIFY
 #endif
@@ -765,6 +766,12 @@ static inline bool bdev_integrity_enabled(struct block_device *bdev, int rw)
 
 	return false;
 }
+#else
+static inline bool bdev_integrity_enabled(struct block_device *bdev, int rw)
+{
+	return false;
+}
+#endif /* HAVE_BLK_INTEGRITY_ENABLED */
 
 #ifdef HAVE_PAGEVEC_INIT_ONE_PARAM
 #define ll_pagevec_init(pvec, n) pagevec_init(pvec)
